...
            Button("CLICK ME") {
                errorTitle = "NEW ERROR!!!!"
                showError.toggle()
            }
        }
        .alert(errorTitle ?? "Error", isPresented: Binding(value: $errorTitle)) {
            Button("OK") {
                
            }
        }
        .alert(errorTitle ?? "Error", isPresented: Binding(get: {
            errorTitle != nil
        }, set: { newValue in
...
